<resources>

    <!--MainActivity Strings-->
    <string name="app_name">MeetingRoom</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_meeting_rooms">MeetingRooms</string>
    <string name="device_SSO">Device SSO: </string>
    <string name="auth_type">Authentication Type:</string>
    <string name="none">Integrated Auth</string>
    <string name="secure_tunnel">Secure Tunnel Established: </string>
    <string name="magUrl">mag.airwdemo.com</string>
    <string name="tap_to_continue">Tap to continue</string>
    <string name="check_desc">Checkmark</string>
    <string name="lock_symbol">Lock symbol</string>
    <string name="blue_background">Blue background</string>
    <string name="white_background">White background</string>
    <string name="aw_logo">VMW Logo</string>
    <string name="loading1">Device SSO &amp; MAG Tunnel Initiating...</string>
    <!--<string name="loading2">Loading application settings..</string>-->
    <!--<string name="loading3">Loading application settings...</string>-->

    <!--MeetingRoom Strings-->
    <string name="bes_server_string">atl02demomgmt27.airwatch.demo</string>
    <string name="blank_default">---</string>
    <string name="available_now">Available Now</string>
    <string name="available">Available</string>
    <string name="unavailable">Unavailable</string>
    <string name="gps_disabled">GPS Disabled</string>
    <string name="gps_enabled">GPS Enalbed</string>
    <string name="gps_undetectable">No GPS</string>

    <string-array name="room_status">
        <item>@string/available</item>
        <item>@string/unavailable</item>
    </string-array>


    <string name="location_symbol">Location Symbol</string>
    <string name="calendar_symbol">Calendar Symbol</string>
    <string name="filter_symbol">Filter Symbol</string>
    <string name="room_image">Room Image</string>
    <string name="star_count">Star Count</string>
    <string name="projector">Projector</string>
    <string name="conferencecall">Conference Call Ready</string>
    <string name="touch_screen">Touch Screen SmartTV</string>
    <string name="wifi_eth">Wifi &amp; Ethernet</string>
    <string name="video_conf">Video Conference Ready</string>
    <string name="seats4">Seats 4</string>
    <string name="seats8">Seats 8</string>
    <string name="seats14">Seats 14</string>
    <string name="seats144">Seats 144</string>
    <string name="lincoln_details">Seats 4 \nProjector \nConference Call Ready\nTouch Screen SmartTV \nWiFi &amp; Ethernet \nVideo Conference Ready</string>
    <string name="kennedy_details">Seats 8 \nProjector \nConference Call Ready\nTouch Screen SmartTV \nWiFi &amp; Ethernet \nVideo Conference Ready</string>
    <string name="jefferson_details">Seats 14 \nProjector \nConference Call Ready\nTouch Screen SmartTV \nWiFi &amp; Ethernet \nVideo Conference Ready</string>
    <string name="clinton_details">Seats 144 \nProjector \nConference Call Ready\nTouch Screen SmartTV \nWiFi &amp; Ethernet \nVideo Conference Ready</string>

    <!--Conference Room Strings-->
    <string name="lincoln_conference_room">Lincoln Conference Room</string>
    <string name="lincoln_location">TOWER 2, FLOOR 20, ROOM 210A</string>
    <string name="kennedy_conference_room">Kennedy Conference Room</string>
    <string name="kennedy_location">TOWER 1, FLOOR 13, ROOM 101B</string>
    <string name="clinton_conference_room">Reagan Conference Room</string>
    <string name="clinton_location">TOWER 1, FLOOR 1, ROOM 101A</string>
    <string name="jefferson_conference_room">Jefferson Conference Room</string>
    <string name="jefferson_location">TOWER 3, FLOOR 31, ROOM 310F</string>
    <string name="title_activity_web_view">WebView</string>

    <string name="hello_world">Hello world!</string>

</resources>
